Bug fixing after code review
User input for grid dimensions bound to session;
HTML5 input required added;
charset & pageEncoding changed to UTF-8;
when company is added to grid or deleted from it, it dynamically
appears/disappears;
Entities now implement Serializable (issue after restarting Tomcat and
non-serializable object is bound to session)

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -3,13 +3,13 @@
   <display-name>MyWebProject</display-name>
   <servlet>
     <servlet-name>createCompany</servlet-name>
-    <jsp-file>/createCompany.jsp</jsp-file>
+    <jsp-file>/jsp/createCompany.jsp</jsp-file>
   </servlet>
   <servlet-mapping>
     <servlet-name>createCompany</servlet-name>
     <url-pattern>/createcompany</url-pattern>
   </servlet-mapping>
   <welcome-file-list>
-    <welcome-file>showCompanies.jsp</welcome-file>
+    <welcome-file>jsp/showCompanies.jsp</welcome-file>
   </welcome-file-list>
 </web-app>
